# SimLennardJones

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.c
include/: io.h  ljs.h  simulation.h  system.h
scripts/: plot.py
src/: CMakeLists.txt  io.c  ljs.c  simulation.c  system.c
